src/objects/Admin_Time_Entry_Data__c.object
<CustomObject>
    <fields>
        <fullName>Admin_Time__c</fullName>
        <description>LC-4406 : QRPM and ClinicalRoles reporting</description>
        <label>Admin Time</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>LC-4406 : QRPM and ClinicalRoles reporting</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is used to store related budget record</description>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Admin Time Entry Data</relationshipLabel>
        <relationshipName>Admin_Time_Entry_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>LC-11296 : This field is used to store Role value for admin time entry record.</description>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Type__c</fullName>
        <description>LC-4406 : QRPM and ClinicalRoles reporting</description>
        <label>Visit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAdminBudgetHours__c</fullName>
        <description>LC-14866 : QRPM and ClinicalRoles reporting.</description>
        <label>TotalAdminBudgetHours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Admin Time Entry Data</label>
    <nameField>
        <displayFormat>ATE-{0000000}</displayFormat>
        <label>Admin Time Entry Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admin Time Entry Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>